# sigma-core

./: CMakeLists.txt  README.md  main.c  sigma.h
core/: math_core.c  math_core.h  plot_ascii_graph.h
func/const/impl/: func_const.c  func_const.h
func/const/transform/: const_transform.c  const_transform.h
func/deriv/impl/: func_derive.c  func_derive.h
func/deriv/transform/: derive_transform.c  derive_transform.h
func/derive/transform/: derive_transform.c  derive_transform.h
func/integrate/impl/: func_integrate.c  func_integrate.h
func/integrate/transform/: integrate_transform.c  integrate_transform.h
func/plot/impl/: func_plot.c  func_plot.h
inf/: sigma.c  sigma.h
lang/: lang_def.c  lang_def.h
lang/eval/: evaluator.c  evaluator.h
lang/eval/const/: eval_const.c  eval_const.h
lang/eval/transform/: eval_transform.c  eval_transform.h
lang/lexer/: lexer.c  lexer.h
lang/math/: lang_def.c  lang_def.h  math_lang_def.c  math_lang_def.h
lang/math/eval/: evaluator.h  math_evaluator.c  math_evaluator.h
lang/math/eval/const/: eval_const.c  math_eval_const.c  math_eval_const.h
lang/math/eval/transform/: eval_transform.c  eval_transform.h  math_eval_transform.c  math_eval_transform.h
lang/math/lexer/: lexer.c  lexer.h  math_lexer.c  math_lexer.h
lang/math/parser/: math_parser.c  math_parser.h
lang/math/postprocess/: math_postprocess.c  math_postprocess.h  postprocess.c  postprocess.h
lang/math/preprocess/: math_preprocess.c  math_preprocess.h  preprocess.c  preprocess.h
lang/math/stringify/: math_stringify.c  math_stringify.h  stringify.c  stringify.h
lang/parser/: parser.c  parser.h
lang/pattern/: const_patterns.txt  pattern.c  pattern.h  pattern_compile.c  pattern_compile.h
lang/pattern/capture/: pattern_capture.c  pattern_capture.h
lang/pattern/compile/: pattern_compile.c  pattern_compile.h
lang/pattern/generate/: pattern_generate.c  pattern_generate.h
lang/pattern/match/: pattern_match.c  pattern_match.h
lang/pattern/replace/: pattern_replace.c  pattern_replace.h
lang/preprocess/: preprocess.c  preprocess.h
lang/sigma/: sigma_lang_def.c  sigma_lang_def.h
lang/sigma/compile/: sigma_compile.c  sigma_compile.h
lang/stringify/: stringify.c
lib/: testlib.c  testlib.h
plot/: plot_ascii_graph.c
server/: server.py
server/templates/: index.html
tests/: CMakeLists.txt  main.c  test_func_const.c  test_func_derive.c  test_lexer.c  test_parser.c  test_pattern.c  test_preprocessor.c  test_stringify.c
util/: io.c  io.h  logging.h
